--- a/django_projects/askdjango/blog/templates/blog/post_list.html
+++ b/django_projects/askdjango/blog/templates/blog/post_list.html
@@ -42,6 +42,15 @@ body {
     <div class="jumbotron">
         <h1>AskDjango</h1>
         <p>This is a template showcasing the optional theme stylesheet included in Bootstrap. Use it as a starting point to create something more unique by building on or modifying it.</p>
+
+        <ul>
+            <li>
+                <a href="{% url "mysum" "1/2/3/4/5/6/7/8/9/10" %}">10까지 합</a>
+            </li>
+            <li>
+                <a href="{% url "hello" name="김진돌" age=10 %}">김진돌에게 인사</a>
+            </li>
+        </ul>
     </div>
 </div>
 
