--- a/django_projects/askdjango/blog/templates/blog/post_list.html
+++ b/django_projects/askdjango/blog/templates/blog/post_list.html
@@ -45,10 +45,10 @@ body {
 
         <ul>
             <li>
-                <a href="{% url "mysum" "1/2/3/4/5/6/7/8/9/10" %}">10까지 합</a>
+                <a href="{% url "dojo:mysum" "1/2/3/4/5/6/7/8/9/10" %}">10까지 합</a>
             </li>
             <li>
-                <a href="{% url "hello" name="김진돌" age=10 %}">김진돌에게 인사</a>
+                <a href="{% url "dojo:hello" name="김진돌" age=10 %}">김진돌에게 인사</a>
             </li>
         </ul>
     </div>
