--- a/django_projects/askdjango/blog/templates/blog/post_list.html
+++ b/django_projects/askdjango/blog/templates/blog/post_list.html
@@ -51,6 +51,17 @@ body {
                 <a href="{% url "dojo:hello" name="김진돌" age=10 %}">김진돌에게 인사</a>
             </li>
         </ul>
+
+        <ul>
+        {% for post in post_list %}
+        <li>
+            <!-- <a href="{% url "blog:post_detail" post.pk %}"> -->
+            <a href="{{ post.get_absolute_url }}">
+                {{ post.title }}
+            </a>
+        </li>
+        {% endfor %}
+        </ul>
     </div>
 </div>
 
