PostForm 을 통해 post_new 뷰 구현

--- a/django_projects/askdjango/blog/templates/blog/post_list.html
+++ b/django_projects/askdjango/blog/templates/blog/post_list.html
@@ -62,6 +62,8 @@ body {
         </li>
         {% endfor %}
         </ul>
+
+        <a href="{% url "blog:post_new" %}" class="btn btn-primary">New Post</a>
     </div>
 </div>
 
