post_form.html, errors 커스텀 스타일

--- a/django_projects/askdjango/blog/templates/blog/post_form.html
+++ b/django_projects/askdjango/blog/templates/blog/post_form.html
@@ -1,3 +1,9 @@
+<style>
+.errors {
+    font-weight: bold;
+    color: red;
+}
+</style>
 
 <form action="" method="post">
     {% csrf_token %}
@@ -12,9 +18,13 @@
             {{ field.label_tag }}
             {{ field }}
             {{ field.help_text }}
-            {% for error in field.errors %}
-                {{ error }}
-            {% endfor %}
+            {% if field.errors %}
+                <ul class="errors">
+                {% for error in field.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
         </li>
         {% endfor %}
 
