--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -7,4 +7,5 @@
 <hr/>
 <a href="{% url "blog:post_list" %}">목록</a>
 <a href="{% url "blog:post_edit" post.pk %}">수정</a>
+<a href="{% url "blog:comment_new" post.pk %}">댓글쓰기</a>
 
