댓글목록을 post_detail 템플릿에 노출

--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -3,6 +3,15 @@
 <p>by {{ post.author }}</p>
 
 {{ post.content }}
+<gr/>
+
+<ul>
+{% for comment in post.comment_set.all %}
+<li>
+    {{ comment.message }} at {{ comment.created_at }}
+</li>
+{% endfor %}
+</ul>
 
 <hr/>
 <a href="{% url "blog:post_list" %}">목록</a>
