댓글 수정 구현

--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -9,6 +9,7 @@
 {% for comment in post.comment_set.all %}
 <li>
     {{ comment.message }} at {{ comment.created_at }}
+    <a href="{% url "blog:comment_edit" post.pk comment.pk %}">수정</a>
 </li>
 {% endfor %}
 </ul>
