blog/views.py 내에 messages 메세지 남기고, post_detail.html 내에서만 소비

--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -1,3 +1,14 @@
+
+{% if messages %}
+<ul>
+    {% for message in messages %}
+    <li>
+        {{ message.tags }} : {{ message }}
+    </li>
+    {% endfor %}
+</ul>
+{% endif %}
+
 <h1>{{ post.title }}</h1>
 
 <p>by {{ post.author }}</p>
