--- a/django_projects/askdjango/blog/templates/blog/comment_form.html
+++ b/django_projects/askdjango/blog/templates/blog/comment_form.html
@@ -1,3 +1,6 @@
+{% extends "blog/base.html" %}
+
+{% block content %}
 <form action="" method="post">
     {% csrf_token %}
     <table>
@@ -5,4 +8,5 @@
     </table>
     <input type="submit" />
 </form>
+{% endblock %}
 
