--- a/django_projects/askdjango/blog/templates/blog/post_form.html
+++ b/django_projects/askdjango/blog/templates/blog/post_form.html
@@ -1,3 +1,6 @@
+{% extends "blog/base.html" %}
+
+{% block content %}
 <style>
 .errors {
     font-weight: bold;
@@ -36,4 +39,5 @@
     </ul>
     <input type="submit" />
 </form>
+{% endblock %}
 
