--- a/django_projects/askdjango/blog/templates/blog/post_list.html
+++ b/django_projects/askdjango/blog/templates/blog/post_list.html
@@ -1,43 +1,6 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-<title>AskDjango Blog</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-<style>
-body {
-    padding-top: 60px;
-}
+{% extends "blog/base.html" %}
 
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
-}
-</style>
-</head>
-<body>
-
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">AskDjango</a>
-        </div>
-    </div>
-</div>
-
+{% block content %}
 <div class="container">
     <div class="jumbotron">
         <h1>AskDjango</h1>
@@ -53,25 +16,18 @@ body {
         </ul>
 
         <ul>
-        {% for post in post_list %}
-        <li>
-            <!-- <a href="{% url "blog:post_detail" post.pk %}"> -->
-            <a href="{{ post.get_absolute_url }}">
-                {{ post.title }}
-            </a>
-        </li>
-        {% endfor %}
+            {% for post in post_list %}
+            <li>
+                <!-- <a href="{% url "blog:post_detail" post.pk %}"> -->
+                <a href="{{ post.get_absolute_url }}">
+                    {{ post.title }}
+                </a>
+            </li>
+            {% endfor %}
         </ul>
 
         <a href="{% url "blog:post_new" %}" class="btn btn-primary">New Post</a>
     </div>
 </div>
+{% endblock %}
 
-<div class="footer">
-    <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
-    </div>
-</div>
-
-</body>
-</html>
