--- a/django_projects/askdjango/blog/templates/blog/comment_form.html
+++ b/django_projects/askdjango/blog/templates/blog/comment_form.html
@@ -1,12 +1,18 @@
 {% extends "blog/base.html" %}
+{% load bootstrap3 %}
 
 {% block content %}
-<form action="" method="post">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <input type="submit" />
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <form action="" method="post">
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                <input type="submit" class="btn btn-primary btn-block" />
+            </form>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
 
