부모템플릿에서 sidebar block 을 정의한 후, 템플릿 상속을 통해 메뉴 정의

--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -36,6 +36,11 @@ body { margin-bottom: 60px; }
         {% endfor %}
     {% endif %}
 
+    <ul>
+    {% block sidebar %}
+    {% endblock %}
+    </ul>
+
     {% block content %}
     {% endblock %}
 
