extra_head block 을 통해 block 커스텀 css 적용

--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -17,6 +17,7 @@ body { margin-bottom: 60px; }
     background-color: #f5f5f5;
 }
 </style>
+{% block extra_head %}{% endblock %}
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
