--- a/django_projects/askdjango/blog/templates/blog/base.html
+++ b/django_projects/askdjango/blog/templates/blog/base.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block extra_head %}
+<link rel="stylesheet" href="/static/blog/style.css" />
+{% endblock %}
+
 {% block sidebar %}
 <li>블로그 메뉴 1</li>
 <li>블로그 메뉴 2</li>
