--- a/django_projects/askdjango/blog/templates/blog/base.html
+++ b/django_projects/askdjango/blog/templates/blog/base.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block extra_head %}
-<link rel="stylesheet" href="/static/blog/style.css" />
+<link rel="stylesheet" href="{% static "blog/style.css" %}" />
 {% endblock %}
 
 {% block sidebar %}
