--- a/django_projects/askdjango/blog/templates/blog/post_form.html
+++ b/django_projects/askdjango/blog/templates/blog/post_form.html
@@ -8,7 +8,7 @@
 }
 </style>
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
 
     {% for field in form.hidden_fields %}
