post_detail 통해서 Post photo 이미지 확인

--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -6,6 +6,18 @@
 
 <p>by {{ post.author }}</p>
 
+{% if post.photo %}
+    <img src="{{ post.photo.url }}" />
+    <ul>
+        <li>
+            url : {{ post.photo.url }}
+        </li>
+        <li>
+            path : {{ post.photo.path }}
+    </li>
+    </ul>
+{% endif %}
+
 {{ post.content }}
 <gr/>
 
