로그인 폼에 페이스북 oauth 로그인 URL 추가

--- a/django_projects/askdjango/accounts/templates/accounts/login_form.html
+++ b/django_projects/askdjango/accounts/templates/accounts/login_form.html
@@ -1,3 +1,4 @@
+{% load socialaccount %}
 
 <form action="" method="post">
     {% csrf_token %}
@@ -6,4 +7,7 @@
     </table>
     <input type="submit" />
 </form>
+
+<hr/>
+<a href="{% provider_login_url "facebook" %}">페이스북 로그인</a>
 
