로그인 폼 템플릿에 네이버 로그인 링크 추가

--- a/django_projects/askdjango/accounts/templates/accounts/login_form.html
+++ b/django_projects/askdjango/accounts/templates/accounts/login_form.html
@@ -9,5 +9,6 @@
 </form>
 
 <hr/>
+<a href="{% provider_login_url "naver" %}">네이버 로그인</a>
 <a href="{% provider_login_url "facebook" %}">페이스북 로그인</a>
 
