--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -17,6 +17,7 @@ body { margin-bottom: 60px; }
     background-color: #f5f5f5;
 }
 </style>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 {% block extra_head %}{% endblock %}
 </head>
 <body>
