jQuery Ajax 를 통한 댓글 저장

--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <title>AskDjango Blog</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+<link rel="stylesheet" href="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.css" />
 <style>
 body { padding-top: 60px; }
 html { position: relative; min-height: 100%; }
@@ -53,6 +54,11 @@ body { margin-bottom: 60px; }
         </div>
     </div>
     {% endblock %}
+
+<script src="http://malsup.github.com/jquery.form.js"></script>
+<script src="//rawgit.com/Soldier-B/jquery.toast/master/jquery.toast/jquery.toast.min.js"></script>
+{% block extra_body %}
+{% endblock %}
 
 </body>
 </html>
