--- a/django_projects/askdjango/blog/templates/blog/comment_list.html
+++ b/django_projects/askdjango/blog/templates/blog/comment_list.html
@@ -3,6 +3,7 @@
     <li>
         {{ comment.message }} at {{ comment.created_at }}
         <a href="{% url "blog:comment_edit" comment.post.pk comment.pk %}">수정</a>
+        <a href="{% url "blog:comment_delete" comment.post.pk comment.pk %}">삭제</a>
     </li>
     {% endfor %}
 </ul>
