jQuery ajax 를 통한 댓글 쓰기

--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -17,6 +17,7 @@ body { margin-bottom: 60px; }
     background-color: #f5f5f5;
 }
 </style>
+<script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 {% block extra_head %}{% endblock %}
 </head>
 <body>
@@ -52,6 +53,10 @@ body { margin-bottom: 60px; }
         </div>
     </div>
     {% endblock %}
+
+<script src="http://malsup.github.com/jquery.form.js"></script>
+{% block extra_body %}
+{% endblock %}
 
 </body>
 </html>
