jquery ajax 를 통한 댓글목록 로딩

--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -29,14 +29,9 @@
     <input type="submit" class="btn btn-primary btn-block" />
 </form>
 
-<ul>
-{% for comment in post.comment_set.all %}
-<li>
-    {{ comment.message }} at {{ comment.created_at }}
-    <a href="{% url "blog:comment_edit" post.pk comment.pk %}">수정</a>
-</li>
-{% endfor %}
-</ul>
+<div id="comment_list">
+    {% include "blog/comment_list.html" with comment_list=post.comment_set.all %}
+</div>
 
 <hr/>
 <a href="{% url "blog:post_list" %}">목록</a>
@@ -46,12 +41,22 @@
 
 {% block extra_body %}
 <script>
+function refresh_comment_list() {
+    $.get('{% url "blog:comment_list" post.pk %}').done(function(html) {
+        $('#comment_list').html(html);
+    });
+}
+
 $(function() {
     $('#comment_form').ajaxForm({
         success: function(response, statusText, xhr, $form) {
+            if ( response.ok ) {
+                $('#comment_form').resetForm();
+                refresh_comment_list();
+            }
+
             if ( response.flash_message ) {
                 // $.toast(response.flash_message, {type: 'info', duration: 1500});
-                $('#comment_form').resetForm();
                 alert(response.flash_message)
             }
             if ( response.errors ) {
