--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+{% load staticfiles %}<!doctype html>
 <html>
 <head>
 <meta charset="utf-8" />
@@ -55,6 +55,7 @@ body { margin-bottom: 60px; }
     {% endblock %}
 
 <script src="http://malsup.github.com/jquery.form.js"></script>
+<script src="{% static "jquery.csrf.js" %}"></script>
 {% block extra_body %}
 {% endblock %}
 
