댓글삭제 콜백등록을 document live on 으로 수행

--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -73,7 +73,7 @@ $(function() {
         }
     });
 
-    $('.ajax-post').click(function() {
+    $(document).on('click', '.ajax-post', function() {
         var url = $(this).attr('href');
         var confirm_message = $(this).data('confirm-message');
         var target_id = $(this).data('target-id');
