blog 포스팅별 채팅 구현

--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -56,6 +56,7 @@ body { margin-bottom: 60px; }
 
 <script src="http://malsup.github.com/jquery.form.js"></script>
 <script src="{% static "jquery.csrf.js" %}"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
 {% block extra_body %}
 {% endblock %}
 
