--- a/django_projects/askdjango/blog/templates/blog/post_detail.html
+++ b/django_projects/askdjango/blog/templates/blog/post_detail.html
@@ -21,12 +21,17 @@
 {{ post.content }}
 <hr/>
 
+<input type="text" id="chat_text" placeholder="chat text" />
+<ul id="chat"></ul>
+<hr/>
+
 <form id="comment_form" action="{% url "blog:comment_new" post.id %}" method="post">
     {% csrf_token %}
     <table>
         {{ comment_form.as_table }}
     </table>
     <input type="submit" class="btn btn-primary btn-block" />
+    <input type="submit" id="comment_ws_submit" class="btn btn-default btn-block" value="WebSocket 으로 쓰기" />
 </form>
 
 <div id="comment_list">
@@ -40,6 +45,28 @@
 {% endblock %}
 
 {% block extra_body %}
+<script>
+$(function() {
+    var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
+    var ws_url = ws_scheme + '://' + window.location.host + window.location.pathname + "stream/?session_key={{ request.session.session_key }}";
+    var chatsock = new ReconnectingWebSocket(ws_url);
+
+    chatsock.onmessage = function(message) {
+        var data = JSON.parse(message.data);
+        $("#chat").append('<li>[' + data.username + '] ' + data.chat_text + ' </li>');
+    };
+
+    $('#chat_text').keydown(function(key) {
+        if (key.keyCode == 13 ) {
+            var chat_text = $(this).val();
+            $(this).val('');
+            chatsock.send(JSON.stringify({chat_text: chat_text}));
+        }
+    });
+
+});
+</script>
+
 <script>
 function refresh_comment_list() {
     $.get('{% url "blog:comment_list" post.pk %}').done(function(html) {
