--- a/django_projects/askdjango/askdjango/templates/base.html
+++ b/django_projects/askdjango/askdjango/templates/base.html
@@ -29,6 +29,14 @@ body { margin-bottom: 60px; }
         </div>
     </div>
 
+    {% if not user.is_authenticated %}
+        <a href="{% url "login" %}?next={{ request.get_full_path }}">로그인</a>
+        <a href="{% url "signup" %}">회원가입</a>
+    {% else %}
+        <a href="{% url "logout" %}">로그아웃</a>
+    {% endif %}
+    <hr/>
+
     {% if messages %}
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
